Bug 967429 - Disable the UI initiated steping behavior for <input type=number> if the value the user typed in is not valid, and instead highlight the field as being invalid. r=smaug, a=sylvestre